--- a/src/artworks.html
+++ b/src/artworks.html
@@ -20,9 +20,19 @@
         </ul>
     </nav>
 
+    <main>
+        <section>
     <h1>Mina Digitala Illustrationer</h1>
-    <p>Här är två av mina digitala artworks. Jag gillar att experimentera med färger och detaljer.</p>
+    <p>Här delar jag några av mina digitala konstverk och tankar kring skapandeprocessen.</p>
 
+
+        <h2>Min kreativa process</h2>
+        <p>Jag älskar att experimentera med färger och detaljer för att skapa unika illustrationer. 
+           Mina verk skapas med en kombination av digitala penslar och texturer. Programvaran som dessa illsutrationer utfördes var med Procreate.</p>
+    </section>
+    <section>
+        <h2>Galleri</h2>
+        <p>Här är två av mina digitala artworks:</p>
     <picture>
         <source srcset="./images/artwork1.jpg?as=webp&width=300" type="image/webp">
         <img src="./images/artwork1.jpg" alt="Artwork 1">
@@ -31,7 +41,7 @@
         <source srcset="./images/artwork2.jpg?as=webp&width=300" type="image/webp">
         <img src="./images/artwork2.jpg" alt="Artwork 2">
     </picture>
-
+</main>
 </body>
 
 </html>
