--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,21 @@
         </ul>
     </nav>
     
-    <h1>Välkommen till min första SASS webbplats</h1>
-    <p>Denna webbplats är skapad med SASS för att utforska moderna designprinciper och stylingtekniker.</p>
-
-    <section>
-        <h2>Vad du hittar här</h2>
-        <p>På denna webbplats kan du läsa om:</p>
-        <ul>
-            <li>Hur SASS fungerar och hur det förbättrar CSS.</li>
-            <li>Mina digitala illustrationer och kreativa process.</li>
-            <li>Olika typer av tidskrifter och grafiska element.</li>
-        </ul>
-    </section>
-
+    <main class="index-page">
+        <section>
+        <h1>Välkommen till min första SASS webbplats</h1>
+        <p>Denna webbplats är skapad med SASS för att utforska moderna designprinciper och stylingtekniker.</p>
+        </section>
+        <section>
+            <h2>Vad du hittar här</h2>
+            <p>På denna webbplats kan du läsa om:</p>
+            <ul>
+                <li>Hur SASS fungerar och hur det förbättrar CSS.</li>
+                <li>Mina digitala illustrationer och kreativa process.</li>
+                <li>Olika typer av tidskrifter och grafiska element.</li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
