--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,21 @@
         <section>
         <h1>Välkommen till min första SASS webbplats</h1>
         <p>Denna webbplats är skapad med SASS för att utforska moderna designprinciper och stylingtekniker.</p>
+
+        <p>Vill du utforska mer på webbplatsen? Välj ett knappalternativ nedan för att se mina bilder eller läsa min utvärdering av SASS.</p>
+        <div class="button-container">
+            <button onclick="location.href='artworks.html'">Bilder</button>
+            <button onclick="location.href='sass.html'">Utvärdering</button>
+        </div>
         </section>
+
         <section>
             <h2>Vad du hittar här</h2>
             <p>På denna webbplats kan du läsa om:</p>
             <ul>
                 <li>Hur SASS fungerar och hur det förbättrar CSS.</li>
                 <li>Mina digitala illustrationer och kreativa process.</li>
-                <li>Olika typer av tidskrifter och grafiska element.</li>
+                <li>Olika typer av tidskrifter och grafiska element (tomma länkar).</li>
             </ul>
         </section>
     </main>
